--- a/module-3/css/styles.css
+++ b/module-3/css/styles.css
@@ -5,7 +5,7 @@ div > p {
 }
 
 .content-cell {
-	background-color: #BBDDBB;
+	background-color: #e2c9f5;
 	margin-bottom: 15px;
 	padding: 10px 15px;
 }
@@ -49,6 +49,6 @@ div > p {
 	}
 	#nav-list li:hover{
 		font-weight: bold;
-		background-color: #BBDDBB;
+		background-color: #e2c9f5;
 	}
 }
